k8s/react/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
spec:
  replicas: 1
  selector:
    matchLabels:
      component: react
  template:
    metadata:
      labels:
        component: react
    spec:
      containers:
        - name: react
          image: georgeestav/react
          ports:
            - containerPort: 80
          imagePullPolicy: Always
