k8s/react/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
spec:
  rules:
    - host: "django.georgeestav.dns.cloud.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-cluster-ip
                port:
                  number: 8080
